Add changes to package.json

--- a/kaishin/package.json
+++ b/kaishin/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kaikaikoala.github.io",
+  "homepage": "https://kaikaikoala.github.io/kaishin",
   "name": "kaishin",
   "version": "0.1.0",
   "private": true,
