Serve from root

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kaikaikoala.github.io/kaishin",
+  "homepage": "https://kaikaikoala.github.io/",
   "name": "kaishin",
   "version": "0.1.0",
   "private": true,
